# what2_time

./: .darglint  .gitignore  README.md  pyproject.toml  tasks.py  todo.md
src/what2_time/: counter.py  meta_time.py  timer.py
tests/: __init__.py  test_static.py  test_timer.py
