[tool.poetry]
name = "what2-time"
version = "0.2.1"
description = "Reusable timing code that handles unit conversion, pretty printing time, total of repeat and re-entrant timers."
authors = ["Marc Edwards <marc@mlwhat.com>"]
readme = "README.md"
packages = [{include = "what2_time", from = "src"}]
repository = "https://github.com/alwaysmpe/what2_time"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
what2 = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["./src"]

[tool.pyright]
typeCheckingMode  = "strict"
extraPaths = [
    "./src",
]
